--- a/_posts/2023-01-19-iptables学习总结.md
+++ b/_posts/2023-01-19-iptables学习总结.md
@@ -263,6 +263,15 @@ iptables -E IN_WEB WEB
 iptables -X WEB
 ```
 
+## FAQ
+1. 为什么没有安装iptables服务也能使用iptables命令?
+
+```text
+在某些Linux发行版上，即使没有明确安装iptables服务，也可以使用iptables命令。这是因为在这些发行版中，iptables命令是通过iptables软件包提供的，而不是通过iptables服务提供的。
+iptables软件包包含iptables二进制可执行文件，它提供了一组用于设置和管理iptables规则的命令行工具。这些工具允许用户在没有启动iptables服务的情况下，直接在命令行中设置和修改iptables规则。
+因此，尽管没有安装iptables服务，用户仍然可以通过iptables软件包提供的命令行工具来管理系统的防火墙规则。然而，如果需要在系统启动时自动加载iptables规则，或者希望在规则文件中保存规则设置，那么需要安装iptables服务。
+```
+
 ## 参考资料
 [iptables详解][1]
 
